feat(platform): harden networking, bootstrap supply chain, and CI
Security and correctness pass over the whole stack, validated locally
before commit (terraform fmt/validate, TFLint, bash -n, ShellCheck at
--severity=style, Checkov 422 passed / 0 failed, secrets scan clean, and
all five bootstrap scripts rendered through templatefile and checked).

Networking and IAM
- Add VPC Flow Logs to CloudWatch Logs with a configurable retention.
- Split the flow log delivery policy per action: stream writes are scoped
  to the log group's streams, DescribeLogStreams to the log group, and
  DescribeLogGroups stays on "*" because the CloudWatch Logs service
  authorization reference lists it with "Resource types (*required)", so
  IAM rejects any narrower value. The previous single statement scoped
  every action to the log group ARN, which fails delivery with
  AccessDenied.

Compute and monitoring
- Set ebs_optimized, EC2 managed recovery, and a configurable secret
  manager recovery window.
- Default enable_detailed_monitoring to false; one-minute EC2 metrics are
  billable. Public IPs stay enabled by default to avoid an EIP attach
  boot race in cloud-init.
- Make AMI pins optional and keep the current-AMI fallback.

Bootstrap supply chain
- Pin Go, Terraform, kubectl, Helm, Nexus, Maven, and Gradle downloads to
  verified SHA-256 digests, fetched over signed repositories where
  available, and fail closed on mismatch via a shared verify_sha256
  helper.
- Fix the Jenkins global environment setup: the accessor is
  getGlobalNodeProperties(), GlobalNodeProperties exposes no
  getProperties(), and add() takes an EnvironmentVariablesNodeProperty
  rather than a bare Entry. The previous call would have thrown and, with
  set -euo pipefail, aborted the whole bootstrap.

CI
- Expand validate.yml to five jobs and 27 steps covering Terraform,
  TFLint, scripts, rendered user_data, and Checkov. Every action is
  pinned to a commit SHA.
- Render user_data in CI and assert the pinned 